k8s/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  namespace: netflix-app
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
